Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-767

Can't build example send-async on Windows

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • None
    • None
    • Windows VS2010

    Description

      send-async.c uses the c99 feature of declaring a new variable in the body of a block (not just at the top as is required for c89).

      However VS2010 doesn't support this c99 feature.

      The examples do need to be compilable with C on Windows so this should be fixed.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: