PROTON-767: Allow send-async to compile as C89